# siapy-cli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
scripts/: install-dev.sh  lint.sh
source/core/: __init__.py  logger.py  settings.py
source/helpers/: __init__.py  artifacts.py  helpers.py
source/misc/: __init__.py  check_images.py  display_image.py
source/processing/: __init__.py  converter.py  model.py  preparator.py  segmentator.py  selector.py  transformator.py
source/transformator/: __init__.py  transformator.py
